added style, navbar

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 <title>❔</title>
+<link rel="stylesheet" type="text/css" href="style.css" title="style">
 </head>
 <body>
-<h1>The Haunt?</h1>
-<p>Test paragraph.</p>
+<h1>Autumn Pelešová</h1>
+<div class="navbar">
+	<a class = "nav-active" href="index">Home</a>
+	<a href = "profile">Profile</a>
+	<a href = "projects">Projects</a>
+	<a href = "contact">Contact</a>
+</div>
 </body>
 </html>
