--- a/shininglikestar/index.html
+++ b/shininglikestar/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>❔</title>
-<link rel="stylesheet" type="text/css" href="style.css" title="style">
-<link rel="stylesheet" type="text/css" href="img_ids.css" title="style">
+<link rel="stylesheet" type="text/css" href="../style.css" title="style">
+<link rel="stylesheet" type="text/css" href="../img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
@@ -11,14 +11,13 @@
 <body>
 <h1>Autumn<span class = "text-p">Haunted</span></h1>
 <div id = "navbar">
-	<a id = "nav-active" href = "/">Home</a>
+	<a id = "nav-active" href = "../">Home</a>
 	<a href = "profile/index.html">Profile</a>
 	<a href = "projects/index.html">Projects</a>
 	<a href = "contact/index.html">Contact</a>
 </div>
 <div class = "container">
-<div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>.</div>
+<div class = "text">Test</div>
 </div>
 </body>
 </html>
