--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>❔</title>
-<link rel="stylesheet" type="text/css" href="style.css" title="style">
+<link rel="stylesheet" type="text/css" href="autumnhaunted.github.io/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
