--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>❔</title>
-<link rel="stylesheet" type="text/css" href="autumnhaunted.github.io/style.css" title="style">
-<link rel="stylesheet" type="text/css" href="img_ids.css" title="style">
+<link rel="stylesheet" type="text/css" href="/style.css" title="style">
+<link rel="stylesheet" type="text/css" href="/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
@@ -18,7 +18,7 @@
 </div>
 <div class = "container">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>. TEST</div>
+<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>. TEST2</div>
 </div>
 </body>
 </html>
