--- a/shininglikestar/index.html
+++ b/shininglikestar/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>❔</title>
-<link rel="stylesheet" type="text/css" href="../style.css" title="style">
-<link rel="stylesheet" type="text/css" href="../img_ids.css" title="style">
+<link rel="stylesheet" type="text/css" href="../css/style.css" title="style">
+<link rel="stylesheet" type="text/css" href="../css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
