--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <div class = "container">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar/index.html">*</a>.TEST</div>
+<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>.TEST</div>
 </div>
 </body>
 </html>
