--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <h1>Autumn<span class = "text-p">Haunted</span></h1>
 <div id = "navbar">
 	<a id = "nav-active" href = "/">Home</a>
-	<a href = "profile/index.html">Profile</a>
-	<a href = "projects/index.html">Projects</a>
-	<a href = "contact/index.html">Contact</a>
+	<a href = "profile">Profile</a>
+	<a href = "projects">Projects</a>
+	<a href = "contact">Contact</a>
 </div>
 <div class = "container">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar.html">*</a>.TEST5</div>
+<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>.TEST6</div>
 </div>
 </body>
 </html>
