--- a/shininglikestar.html
+++ b/shininglikestar.html
@@ -11,10 +11,10 @@
 <body>
 <h1>Autumn<span class = "text-p">Haunted</span></h1>
 <div id = "navbar">
-	<a id = "nav-active" href = "index.html">Home</a>
-	<a href = "profile/index.html">Profile</a>
-	<a href = "projects/index.html">Projects</a>
-	<a href = "contact/index.html">Contact</a>
+	<a id = "nav-active" href = "/">Home</a>
+	<a href = "profile">Profile</a>
+	<a href = "projects">Projects</a>
+	<a href = "contact">Contact</a>
 </div>
 <div class = "container">
 <div class = "text">Test</div>
