finalised home page (for now), started profile page

--- a/profile.html
+++ b/profile.html
@@ -16,14 +16,14 @@
 </div>
 </div>
 <div id = "navbar">
-	<a id = "nav-active" href = "/">Home</a>
-	<a href = "profile">Profile</a>
+	<a href = "/">Home</a>
+	<a id = "nav-active" href = "profile">Profile</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
 </div>
 <div class = "container">
 <div class = "text">
-When I was 17, my dad fell ill with pancreatic cancer. The last time I saw him, my application to my first-choice university had recently been accepted, so I told him about it. He told me, in his imperfect English, that he was proud of me and that he knew I would "shine like star".
+Test profile.
 </div>
 </div>
 </body>
