--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-<h1>Autumn<span class = "text-p">Haunted</span></h1>
+<div class = "container">
+<div class = "image"><img id = "autumnhaunted_icon"></div>
+<div class = "text">
+<h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
+</div>
+</div>
 <div id = "navbar">
 	<a id = "nav-active" href = "/">Home</a>
 	<a href = "profile">Profile</a>
@@ -17,8 +22,9 @@
 	<a href = "contact">Contact</a>
 </div>
 <div class = "container">
-<div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">Ghostly polymath shining like star<a href = "shininglikestar">*</a>.TEST6</div>
+<div class = "text">
+Hello, I'm Autumn, and this is my website. Welcome!
+</div>
 </div>
 </body>
 </html>
