--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>❔</title>
+<title>AutumnHaunted👻Profile</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,9 +21,9 @@
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
 </div>
-<div class = "container">
+<div class = "middlecontainer">
 <div class = "text">
-Test profile.
+My name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all.
 </div>
 </div>
 </body>
