--- a/shininglikestar.html
+++ b/shininglikestar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>❔</title>
+<title>🌟</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
 </div>
-<div class = "container">
+<div class = "middlecontainer">
 <div class = "text">
 When I was 17, my dad fell ill with pancreatic cancer. The last time I saw him, my application to my first-choice university had recently been accepted, so I told him about it. He told me, in his imperfect English, that he was proud of me and that he knew I would "shine like star".
 </div>
