--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>❔</title>
+<title>AutumnHaunted👻Home</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
