updated some css to hopefully make the website look better on mobile

--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
 </div>
 <div class = "middlecontainer">
 <div class = "text">
-My name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all.
+My name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all. You can see some of what I've been involved with on my Projects page.
 </div>
 </div>
 </body>
