general content update

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-<div class = "container">
+<div class = "headercontainer">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
 <div class = "text">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
@@ -17,10 +17,12 @@
 </div>
 <div id = "navbar">
 	<a href = "/">Home</a>
-	<a id = "nav-active" href = "profile">Profile</a>
+	<a id = "nav-active" href = "about">About</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
+	<a href = "faq">FAQ</a>
 </div>
+<h2>About Me</h2>
 <div class = "middlecontainer">
 <div class = "text">
 My name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all. You can see some of what I've been involved with on my Projects page.
