--- a/shininglikestar.html
+++ b/shininglikestar.html
@@ -9,21 +9,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-<div class = "container">
+<div class = "headercontainer">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
 <div class = "text">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
 </div>
 </div>
 <div id = "navbar">
-	<a id = "nav-active" href = "/">Home</a>
-	<a href = "profile">Profile</a>
+	<a href = "/">Home</a>
+	<a href = "about">About</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
+	<a href = "faq">FAQ</a>
 </div>
+<h2>Don't you mean "shining like <i>a</i> star"?</h2>
 <div class = "middlecontainer">
 <div class = "text">
-When I was 17, my dad fell ill with pancreatic cancer. The last time I saw him, my application to my first-choice university had recently been accepted, so I told him about it. He told me, in his imperfect English, that he was proud of me and that he knew I would "shine like star".
+When I was 17, my dad fell ill with pancreatic cancer. The last time I saw him, my application to my first-choice university had recently been accepted, so I told him about it. He told me, with his imperfect English, that he was proud of me and that he knew I would "shine like star".
 </div>
 </div>
 </body>
