--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap&family=Exo:wght@700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-<div class = "container">
+<div class = "headercontainer">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
 <div class = "text">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
@@ -17,9 +17,10 @@
 </div>
 <div id = "navbar">
 	<a id = "nav-active" href = "/">Home</a>
-	<a href = "profile">Profile</a>
+	<a href = "about">About</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
+	<a href = "faq">FAQ</a>
 </div>
 <div class = "container">
 <div class = "text">
