added projects page and youtube subpage

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
 <div class = "headercontainer">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">
+<div class = "headertext">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
 </div>
 </div>
 <div id = "navbar">
 	<a id = "nav-active" href = "/">Home</a>
-	<a href = "about">About</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
 	<a href = "faq">FAQ</a>
 </div>
-<div class = "container">
+<h2>About Me</h2>
+<div class = "middlecontainer">
 <div class = "text">
-Hello, I'm Autumn, and this is my website. Welcome!
+Hello, my name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all. You can see some of what I've been involved with on my Projects page.
 </div>
 </div>
 </body>
