--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>🌟</title>
+<title>AutumnHaunted👻Projects</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,15 +17,21 @@
 </div>
 <div id = "navbar">
 	<a href = "/">Home</a>
-	<a href = "projects">Projects</a>
+	<a id = "nav-active" href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
 	<a href = "faq">FAQ</a>
 </div>
-<h2>Don't you mean "shining like <i>a</i> star"?</h2>
-<div class = "middlecontainer">
-<div class = "text">
-When I was 17, my dad fell ill with pancreatic cancer. The last time I saw him, my application to my first-choice university had recently been accepted, so I told him about it. He told me, with his imperfect English, that he was proud of me and that he knew I would "shine like star".
+<div class = "container">
+<a href = "projects/youtube" class = "projectlink">YouTube</a>
 </div>
+<div class = "container">
+<a href = "projects/games" class = "projectlink">Games</a>
+</div>
+<div class = "container">
+<a href = "projects/art" class = "projectlink">Art</a>
+</div>
+<div class = "container">
+<a href = "projects/music" class = "projectlink">Music</a>
 </div>
 </body>
 </html>
