--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AutumnHaunted👻Profile</title>
+<title>AutumnHaunted👻FAQ</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" title="style">
 <link rel="stylesheet" type="text/css" href="css/img_ids.css" title="style">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,21 +11,25 @@
 <body>
 <div class = "headercontainer">
 <div class = "image"><img id = "autumnhaunted_icon"></div>
-<div class = "text">
+<div class = "headertext">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
 </div>
 </div>
 <div id = "navbar">
 	<a href = "/">Home</a>
-	<a id = "nav-active" href = "about">About</a>
 	<a href = "projects">Projects</a>
 	<a href = "contact">Contact</a>
-	<a href = "faq">FAQ</a>
+	<a id = "nav-active" href = "faq">FAQ</a>
 </div>
-<h2>About Me</h2>
+<h2>Frequently Anticipated Questions</h2>
 <div class = "middlecontainer">
 <div class = "text">
-My name is Autumn Pelešová. I'm a Slovak-born British software developer, though I have a wide range of interests and hobbies without enough free time to indulge them all. You can see some of what I've been involved with on my Projects page.
+<h3>Ghostly?</h3>
+<span class = faqentry>I like to present myself online with a ghost-inspired aesthetic.</span><br>
+<h3>Polymath?</h3>
+<span>A polymath is someone with knowledge in a wide range of fields. I don't think it quite applies to me yet, but it's something I aspire to, to an extent.</span><br>
+<h3>"Shining like star"?</h3>
+<span>Shining like star<a href = "shininglikestar">*</a>.</span><br>
 </div>
 </div>
 </body>
