--- a/projects/games.html
+++ b/projects/games.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class = "headercontainer">
-<div class = "image"><img id = "autumnhaunted_icon"></div>
+<div class = "image"><img src = "../images/autumnhaunted_icon.png"></div>
 <div class = "headertext">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
 </div>
@@ -25,21 +25,21 @@
 	<h2>Bikdip's Adventure 3: A Mitch in the Matrix</h2>
 </div>
 <div class = "middlecontainer">
-	<div class = "image"><img class = "projectimage" id = "ba3_title_screen"></div>
+	<div class = "image"><img class = "projectimage" src = "../images/ba3_title_screen.png"></div>
 	<span class = "projecttext">The third entry in the Bikdip's Adventure series. I'm assisting the developer of the first two games, BikdipOnABus, with this game's creation using the deliberately outdated Zelda Classic version 1.92. Our mission statement is to push the engine to its limits and make the most impressive experience possible with its limited capabilities.</span>
 </div>
 <div class = "container">
 	<h2>Virtuoso</h2>
 </div>
 <div class = "middlecontainer">
-	<div class = "image"><img class = "projectimage" id = "virtuoso_card_back"></div>
+	<div class = "image"><img class = "projectimage" src = "../images/virtuoso_card_back.png"></div>
 	<span class = "projecttext">Virtuoso is a virtual card game playable in Tabletop Simulator. Players build decks made up of virtual entities, objects, maps, and events to overwhelm the opponent's own strategy. The match and advantage effect systems allow for unique combinatorial synergy.</span>
 </div>
 <div class = "container">
 	<h2>Bikdip RPG: Legend of the Seven Felfs</h2>
 </div>
 <div class = "middlecontainer">
-	<div class = "image"><img class = "projectimage" id = "bikdip_rpg_screenshot"></div>
+	<div class = "image"><img class = "projectimage" src = "../images/bikdip_rpg_screenshot.png"></div>
 	<span class = "projecttext">Bikdip RPG is a cancelled fangame made in RPG Maker VX Ace based on the videos of the Let's Player BikdipOnABus. It featured 5 fully playable dungeons, a town with many NPCs and an optional quest, and a partially developed battle system, all designed primarily by myself and one other person before being abandoned in 2018.</span>
 </div>
 </body>
