--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class = "headercontainer">
-<div class = "image"><img id = "autumnhaunted_icon"></div>
+<div class = "image"><img src = "images/autumnhaunted_icon.png"></div>
 <div class = "headertext">
 <h1>Autumn<span class = "text-p">Haunted</span></h1><span class = "unselectable"> </span>Ghostly polymath shining like star<a href = "shininglikestar">*</a>
 </div>
