updated bikdip rpg image

--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
 	<a href = "contact">Contact</a>
 	<a href = "faq">FAQ</a>
 </div>
+<div class = "topline">Look upon my works and despair.</div>
 <div class = "container">
 <a href = "projects/youtube" class = "projectlink">YouTube</a>
 </div>
