--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 <div id = "navbar">
 	<a href = "/">Home</a>
 	<a id = "nav-active" href = "projects">Projects</a>
+	<a href = "files">Files</a>
 	<a href = "contact">Contact</a>
 	<a href = "faq">FAQ</a>
 </div>
