--- a/files.html
+++ b/files.html
@@ -24,8 +24,7 @@
 </div>
 <h2>Files</h2>
 <div class = "text">
-<h3>MIDIs</h3>
-<h4>Bikdip's Adventure</h4>
+<h3>Bikdip's Adventure OST</h3>
 <table class = "filestable">
 <tr><td>1 - Overworld (<i>Overworld</i> from <i>The Legend of Zelda: Link's Awakening</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 1 - Overworld.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 1 - Overworld.wav">WAV</td></tr>
 <tr><td>2 - Level 1 (<i>Brinstar</i> from <i>Metroid</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 2 - Level 1.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 2 - Level 1.wav">WAV</td></tr>
