--- a/files.html
+++ b/files.html
@@ -28,7 +28,7 @@
 <table class = "filestable">
 <tr><td>1 - Overworld (<i>Overworld</i> from <i>The Legend of Zelda: Link's Awakening</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 1 - Overworld.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 1 - Overworld.wav">WAV</td></tr>
 <tr><td>2 - Level 1 (<i>Brinstar</i> from <i>Metroid</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 2 - Level 1.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 2 - Level 1.wav">WAV</td></tr>
-<tr><td>3 - Level 2 (<i>Temple</i> from <i>The Legend of Zelda: The Adventure of Link</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 3 - Level 2.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 3 - Level 2.wav">WAV</td></tr>
+<tr><td>3 - Level 2 (<i>Temple</i> from <i>Zelda II: The Adventure of Link</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 3 - Level 2.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 3 - Level 2.wav">WAV</td></tr>
 <tr><td>4 - Secret Club (<i>Advent</i> from <i>Banjo-Kazooie</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 4 - Secret Club.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 4 - Secret Club.wav">WAV</td></tr>
 <tr><td>5 - Secret Room (<i>Secrets (Click Clock Wood)</i> from <i>Banjo-Kazooie</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 5 - Secret Room.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 5 - Secret Room.wav">WAV</td></tr>
 <tr><td>6 - White Sword Dungeon (<i>Kraid</i> from <i>Metroid</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 6 - White Sword Dungeon.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 6 - White Sword Dungeon.wav">WAV</td></tr>
