Added BA2 Demo download

--- a/files.html
+++ b/files.html
@@ -23,7 +23,11 @@
 	<a href = "faq">FAQ</a>
 </div>
 <h2>Files</h2>
+<hr>
 <div class = "text">
+<h3>Bikdip's Adventure 2: Electric Boogaloo Demo (PureZC Fall 2005 Expo)</h3>
+<a href="/files/games/BA2_Demo.qst">Download the .qst file</a>
+<hr>
 <h3>Bikdip's Adventure OST</h3>
 <table class = "filestable">
 <tr><td>1 - Overworld (<i>Overworld</i> from <i>The Legend of Zelda: Link's Awakening</i>)</td><td><a href = "/files/midis/ba1/BA1 OST 1 - Overworld.mid">MIDI</td><td><a href = "/files/wavs/ba1/BA1 OST 1 - Overworld.wav">WAV</td></tr>
